feat(seo): add canonical, Open Graph and JSON-LD; keep theme init IIFE

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         } catch (_) {}
       })();
     </script>
+    <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
