--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Web & Software Developer (MERN). Modern UIs, accessible UX, and scalable services."
     />
-    <link rel="canonical" href="https://khambazarov.dev/" />
+    <link rel="canonical" href="https://portfolio.khambazarov.dev/" />
 
     <!-- Open Graph (LinkedIn, Slack, etc.) -->
     <meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
       property="og:description"
       content="Web & Software Developer (MERN). Modern UIs, accessible UX, and scalable services."
     />
-    <meta property="og:url" content="https://khambazarov.dev/" />
+    <meta property="og:url" content="https://portfolio.khambazarov.dev/" />
     <meta property="og:image" content="/og.png" />
 
     <!-- Structured Data (Google) -->
@@ -32,7 +32,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Renat Khambazarov",
-        "url": "https://khambazarov.dev/",
+        "url": "https://portfolio.khambazarov.dev/",
         "jobTitle": "Web & Software Developer",
         "sameAs": [
           "https://github.com/Khambazarov",
