feat(a11y): add keyboard skip-link to main content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       content="Web & Software Developer (MERN). Modern UIs, accessible UX, and scalable services."
     />
     <meta property="og:url" content="https://portfolio.khambazarov.dev/" />
-    <meta property="og:image" content="/og.png" />
+    <meta
+      property="og:image"
+      content="https://portfolio.khambazarov.dev/og.png"
+    />
 
     <!-- Structured Data (Google) -->
     <script type="application/ld+json">
@@ -41,10 +44,12 @@
       }
     </script>
 
-    <!-- Icons -->
-    <link rel="icon" href="/favicon.ico" />
+    <!-- Icons (modern + Fallbacks) -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" sizes="32x32" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <meta name="theme-color" content="#0b0b0b" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0b0b0d" />
 
     <!-- Theme bootstrap (persisted -> system -> dark) -->
     <script>
