--- a/public/impressum.html
+++ b/public/impressum.html
@@ -37,6 +37,27 @@
         font-size: 0.9rem;
       }
     </style>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://portfolio-khambazarov.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Impressum",
+            "item": "https://portfolio-khambazarov.netlify.app/impressum.html"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <h1>Rechtliche Hinweise</h1>
