--- a/public/privacy.html
+++ b/public/privacy.html
@@ -40,6 +40,27 @@
         padding-left: 1.2rem;
       }
     </style>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://portfolio-khambazarov.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Privacy",
+            "item": "https://portfolio-khambazarov.netlify.app/privacy.html"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <h1>Datenschutzerklärung</h1>
