--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
       property="og:image"
       content="https://portfolio-khambazarov.netlify.app/og.png"
     />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Renat Khambazarov — Portfolio" />
+
+    <link
+      rel="preload"
+      href="/og.png"
+      as="image"
+      media="(min-width:1px)"
+      imagesrcset="/og.png 1200w, /og@2x.png 2400w"
+      imagesizes="1200px"
+    />
+
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- ================= Icons / PWA ================= -->
