--- a/index.html
+++ b/index.html
@@ -55,14 +55,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Renat Khambazarov — Portfolio" />
 
-    <link
-      rel="preload"
-      href="/og.png"
-      as="image"
-      media="(min-width:1px)"
-      imagesrcset="/og.png 1200w, /og@2x.png 2400w"
-      imagesizes="1200px"
-    />
+    <link rel="prefetch" href="/og.png" as="image">
 
     <meta name="twitter:card" content="summary_large_image" />
 
